syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message Delegate {
  int32 id = 1;
  int32 score_sheet_id = 2;
  string name = 3;
}